Fix spacing and simple changes, change title and snippet of news article to text instead of html

--- a/app/assets/stylesheets/organizations.scss
+++ b/app/assets/stylesheets/organizations.scss
@@ -26,15 +26,6 @@ img.full-width {
 }
 
 div.container div.single-map{
-<<<<<<< 519decbaf5d6f1abcc207d7d2a7133943109ae70
-  position:absolute;
-  right:6%;
-  top: 75px;
-  float:right;
-  width:200px;
-  height:160px;
-  transition: 1s;
-=======
     position: absolute;
     right: 6%;
     top: 75px;
@@ -42,7 +33,6 @@ div.container div.single-map{
     width: 200px;
     height: 160px;
     transition: 1s;
->>>>>>> Addressing code review comments
 }
 
 div.container div.single-map:hover{
